Change Log for OpenXava project
===============================

- Fix: Return to PREVIOUS_MODULE with hasReinitNextModule in IChangeModuleAction not execute on-init action.
- Added reinit property to ReturnPreviousModuleAction to customize the initiation of the module on return.
- Fix: Using a permalink, it's possible to access a record not available in the list.
- Fix: Third level qualified properties in baseCondition of @Tab fails if those properties are not in list.
- New changeLast() in Strings utility class to change the last occurrence of a string inside other string.
- Some new common use labels to be used in applications.
- Fix: AccessTracker sends all values for the key upon modification for @AsEmbedded references.
- Documentation in reference guide to manage programmatically files of @File/@Files/FILE/FILES properties.
- Fix: Tree is not shown correctly when it's inside a reference.
- Fix: NullPointerException in the log when clicking an action inside the dialog on a tree element.

OpenXava 7.4.1 (2024-10-4)
--------------------------
- New Maven archetypes "openxava-invoicing-archetype" in English and Spanish (-spanish).
- Simple view layout when flowLayout=true applied until 15 plain properties instead of 8.
- Groovy upgraded to 4.0.23.
- Embedded Tomcat used in development upgraded to 9.0.95.
- Log4j API and core upgraded to 2.24.1.
- Lesson 6 of the reporting course with JasperReports available in the documentation with video.
- Fix: The tree editor ignores hierarchy and order.
- Fix: Search in a reference typing the key can get a record excluded from the search using the dialog.
- Fix: The chosen date in the list calendar format is not remembered by the user between sessions.
- Fix: Combo for choosing date in calendar list format disappears from time to time.
- Fix: Calendar list format fails when baseCondition references a not displayed qualified property.
- Fix: Members with underscores (_) in the name (snake_case) are not shown in detail mode.